->fixed wrong margins of typeahead autocomplete fields

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-authors.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-authors.less
@@ -8,3 +8,7 @@
 span.disambiguationTitle {
 	font-style: italic;
 }
+
+.form-group .twitter-typeahead {
+	padding-top: 0px;
+}
